--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,9 +33,14 @@
     "@near-wallet-selector/core": "^8.1.4",
     "@near-wallet-selector/modal-ui": "^8.1.4",
     "@near-wallet-selector/my-near-wallet": "^8.1.4",
+    "font-awesome": "^4.7.0",
     "near-api-js": "^2.1.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-rating": "^2.0.5",
+    "react-router-dom": "^6.14.2",
+    "react-star-ratings": "^2.3.0",
     "regenerator-runtime": "^0.13.11"
   },
   "resolutions": {
