--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,9 @@
     "@near-wallet-selector/my-near-wallet": "^8.1.4",
     "near-api-js": "^2.1.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-star-ratings": "^2.3.0",
     "regenerator-runtime": "^0.13.11"
   },
   "resolutions": {
