--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "near-cli": "^3.3.0"
   },
   "dependencies": {
-    "near-sdk-js": "^1.0.0"
+    "near-sdk-js": "^1.0.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   }
 }
