--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,28 +11,36 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@types/node": "^20.3.2",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.14",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^5.5.0||^6.0.0",
     "env-cmd": "^10.1.0",
     "events": "^3.1.0",
     "https-browserify": "^1.0.0",
     "nodemon": "^2.0.22",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.9.3",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.27",
     "process": "^0.11.10",
     "punycode": "^1.4.1",
     "querystring-es3": "^0.2.1",
     "react-test-renderer": "^18.2.0",
+    "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.0",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
+    "tty-browserify": "0.0.1",
     "typescript": "^5.1.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "util": "^0.12.5"
   },
   "dependencies": {
     "@near-wallet-selector/core": "^8.1.4",
     "@near-wallet-selector/modal-ui": "^8.1.4",
     "@near-wallet-selector/my-near-wallet": "^8.1.4",
+    "@pinata/sdk": "^2.1.0",
     "font-awesome": "^4.7.0",
     "near-api-js": "^2.1.4",
     "react": "^18.2.0",
